# prophesee_ros_wrapper

./: .clang-format  README.md
prophesee_event_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
prophesee_event_msgs/msg/: Event.msg  PropheseeEvent.msg  PropheseeEventBuffer.msg
prophesee_ros_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
prophesee_ros_driver/cfg/: gen3_low_sensitive_settings.bias  gen3_lower_bg_noise.bias  imx636_CD_less_sensitive.bias
prophesee_ros_driver/include/prophesee_ros_driver/: cd_frame_generator.h  log_tone_mapper.h  prophesee_ros_publisher.h  prophesee_ros_viewer.h  stereo_publisher.h
prophesee_ros_driver/launch/: prophesee_publisher.launch  prophesee_publisher_stereo.launch  prophesee_viewer.launch  prophesee_viewer_stereo.launch  stereo_publisher.launch
prophesee_ros_driver/src/: cd_frame_generator.cpp  log_tone_mapper.cpp  prophesee_ros_publisher.cpp  prophesee_ros_viewer.cpp  stereo_publisher.cpp
prophesee_ros_wrapper/: CHANGELOG.rst  CMakeLists.txt  package.xml
