<?xml version="1.0"?>
<package format="2">
    <name>prophesee_event_msgs</name>
    <version>0.0.2</version>
    <description>Prophesee event-based camera message package</description>

    <maintainer email="nlyubova@prophesee.ai">Natalia Lyubova</maintainer>
    <author email="nlyubova@prophesee.ai">Natalia Lyubova</author>
    <author email="egor.makhov@mail.polimi.it">Egor Makhov</author>

    <license>Apache 2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <build_export_depend>std_msgs</build_export_depend>

    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>

</package>
